--- a/stock_picking_extended/i18n/it.po
+++ b/stock_picking_extended/i18n/it.po
@@ -246,14 +246,16 @@ msgstr "Pagamenti"
 #: field:purchase.order,carriage_condition_id:0
 #: field:stock.picking,carriage_condition_id:0
 msgid "Carriage Condition"
-msgstr "Resa Merce"
+msgstr "Porto"
 
 #. module: stock_picking_extended
 #: model:ir.actions.act_window,name:action_carriage_condition_tree
 #: model:ir.ui.menu,name:menu_action_carriage_condition_tree
 #: view:stock.picking.carriage_condition:0
+#: model:ir.actions.act_window,name:stock_picking_extended.action_carriage_condition_tree
+#: model:ir.ui.menu,name:stock_picking_extended.menu_action_carriage_condition_tree
 msgid "Carriage Conditions"
-msgstr "Resa Merce"
+msgstr "Porto"
 
 #. module: l10n_it_sale
 #: view:sale.order:0
