--- a/l10n_it_account/i18n/it.po
+++ b/l10n_it_account/i18n/it.po
@@ -512,7 +512,7 @@ msgstr "Il piano delle imposte consiste di una vista ad albero, che rispeccchia 
 #: model:ir.model,name:account.model_account_journal
 #: field:validate.account.move,journal_id:0
 msgid "Journal"
-msgstr "Giornale"
+msgstr "Registro"
 
 #. module: account
 #: model:ir.model,name:account.model_account_invoice_confirm
