--- a/sale_order_confirm/i18n/it.po
+++ b/sale_order_confirm/i18n/it.po
@@ -891,3 +891,10 @@ msgstr "Non è possibile confermare perchè il cliente deve essere prima Validat
 #: view:sale.order.confirm:0
 msgid "Address"
 msgstr "Indirizzo di Consegna"
+
+#. module: sale_order_confirm
+#: code:addons/sale_order_confirm/sale.py:79
+#: code:addons/sale_order_confirm/sale.py:104
+#, python-format
+msgid "You can't create an order with Invoicing being based on Picking if there are only service products"
+msgstr "Non è possibile creare un ordine con metodo di fatturazione basato sulle consegne di Magazzino, in quanto sono previsti solo servizi. Inserire sotto Altre Informazioni/Crea Fattura: Manualmente da Ordine"
